--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -4,7 +4,8 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "node scripts/start-dev.js",
+    "dev:vite": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview"
@@ -12,11 +13,11 @@
   "dependencies": {
     "@ant-design/icons": "^6.0.0",
     "@types/node": "^20.19.11",
-    "antd": "^5.27.1",
+    "antd": "5.12.5",
     "axios": "^1.11.0",
     "dayjs": "^1.11.18",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-router-dom": "^7.8.2"
   },
   "devDependencies": {
