--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@cuis/api",
+  "name": "@reki/api",
   "version": "0.1.0",
-  "description": "API controllers and DTOs for CUIS",
+      "description": "API controllers and DTOs for Reki",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
@@ -17,8 +17,8 @@
     "access": "restricted"
   },
   "dependencies": {
-    "@cuis/domain": "^0.1.0",
-    "@cuis/use-cases": "^0.1.0",
+    "@reki/domain": "^0.1.0",
+    "@reki/use-cases": "^0.1.0",
     "class-validator": "^0.14.0",
     "class-transformer": "^0.5.1"
   },
