--- a/package.json
+++ b/package.json
@@ -16,49 +16,48 @@
     "type-check": "turbo run type-check",
     "test": "turbo run test",
     "clean": "turbo run clean",
-    
     "lint:root": "eslint . --fix",
     "format:root": "prettier --write .",
     "format:check:root": "prettier --check .",
-    
     "api:dev": "turbo run dev --filter=@reki/api-server",
     "api:build": "turbo run build --filter=@reki/api-server",
     "api:start": "node packages/api-server/dist/main.js",
     "api:lint": "turbo run lint --filter=@reki/api-server",
     "api:format": "turbo run format --filter=@reki/api-server",
-    
     "frontend:dev": "turbo run dev --filter=@reki/frontend",
     "frontend:build": "turbo run build --filter=@reki/frontend",
     "frontend:lint": "turbo run lint --filter=@reki/frontend",
     "frontend:format": "turbo run format --filter=@reki/frontend",
-    
     "packages:build": "turbo run build --filter=./packages/*",
     "packages:dev": "turbo run dev --filter=./packages/*",
     "packages:lint": "turbo run lint --filter=./packages/*",
     "packages:format": "turbo run format --filter=./packages/*",
-    
     "create:package": "node scripts/create-package.js",
-    
     "prepare": "husky install || true"
   },
   "devDependencies": {
-    "turbo": "^1.10.0",
     "@typescript-eslint/eslint-plugin": "^8.39.0",
     "@typescript-eslint/parser": "^8.39.0",
     "eslint": "^9.33.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
-    "prettier": "^3.0.0",
-    "typescript": "^5.8.3",
     "globals": "^16.3.0",
     "husky": "^8.0.0",
-    "lint-staged": "^15.0.0"
+    "lint-staged": "^15.0.0",
+    "prettier": "^3.0.0",
+    "turbo": "^1.10.0",
+    "typescript": "^5.8.3"
   },
   "dependencies": {
     "better-sqlite3": "^12.2.0",
     "chart.js": "^4.5.0",
+    "mysql": "^2.18.1",
+    "mysql2": "^3.14.4",
+    "oracledb": "^6.9.0",
     "pg": "^8.16.3",
     "pg-query-stream": "^4.10.3",
-    "react-chartjs-2": "^5.3.0"
+    "react-chartjs-2": "^5.3.0",
+    "sqlite3": "^5.1.7",
+    "tedious": "^18.6.1"
   }
 }
