--- a/package.json
+++ b/package.json
@@ -14,7 +14,12 @@
     "format": "turbo run format",
     "format:check": "turbo run format:check",
     "type-check": "turbo run type-check",
-    "test": "turbo run test",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
+    "test:api": "jest --testPathPattern=packages/api-server/__tests__",
+    "test:integration": "jest --testPathPattern=packages/api-server/__tests__/integration.test.ts",
+    "test:seed": "jest --testPathPattern=packages/api-server/__tests__/seed.test.ts",
     "clean": "turbo run clean",
     "lint:root": "eslint . --fix",
     "format:root": "prettier --write .",
@@ -36,6 +41,8 @@
     "prepare": "husky install || true"
   },
   "devDependencies": {
+    "@types/jest": "^29.5.8",
+    "@types/supertest": "^2.0.16",
     "@typescript-eslint/eslint-plugin": "^8.39.0",
     "@typescript-eslint/parser": "^8.39.0",
     "eslint": "^9.33.0",
@@ -43,14 +50,18 @@
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.3.0",
     "husky": "^8.0.0",
+    "jest": "^29.7.0",
     "lint-staged": "^15.0.0",
     "prettier": "^3.0.0",
+    "supertest": "^6.3.3",
+    "ts-jest": "^29.1.1",
     "turbo": "^1.10.0",
     "typescript": "^5.8.3"
   },
   "dependencies": {
     "better-sqlite3": "^12.2.0",
     "chart.js": "^4.5.0",
+    "dotenv": "^17.2.1",
     "mysql": "^2.18.1",
     "mysql2": "^3.14.4",
     "oracledb": "^6.9.0",
