--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -15,8 +15,10 @@
     "@types/node": "^20.19.11",
     "antd": "5.27.1",
     "axios": "^1.11.0",
+    "chart.js": "^4.5.0",
     "dayjs": "^1.11.18",
     "react": "18.2.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "18.2.0",
     "react-router-dom": "^7.8.2"
   },
