--- a/package.json
+++ b/package.json
@@ -14,12 +14,12 @@
     "format": "turbo run format",
     "format:check": "turbo run format:check",
     "type-check": "turbo run type-check",
-    "test": "jest",
-    "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage",
-    "test:api": "jest --testPathPattern=packages/api-server/__tests__",
-    "test:integration": "jest --testPathPattern=packages/api-server/__tests__/integration.test.ts",
-    "test:seed": "jest --testPathPattern=packages/api-server/__tests__/seed.test.ts",
+    "test": "jest --config config/jest.config.js",
+    "test:watch": "jest --config config/jest.config.js --watch",
+    "test:coverage": "jest --config config/jest.config.js --coverage",
+    "test:api": "jest --config config/jest.config.js --testPathPattern=packages/api-server/__tests__",
+    "test:integration": "jest --config config/jest.config.js --testPathPattern=packages/api-server/__tests__/integration.test.ts",
+    "test:seed": "jest --config config/jest.config.js --testPathPattern=packages/api-server/__tests__/seed.test.ts",
     "clean": "turbo run clean",
     "lint:root": "eslint . --fix",
     "format:root": "prettier --write .",
