Add comprehensive script collection for project management
- Created development scripts: dev-start.sh, dev-restart.sh, dev-stop.sh
- Added individual service scripts: start-core.sh, start-app.sh, start-telegram.sh, start-auth.sh, start-db.sh
- Created fast launch scripts without linting: dev-start-fast.sh, start-core-fast.sh, start-telegram-fast.sh
- Added debugging tools: debug.sh, health-check.sh, logs.sh
- Database management: db-reset.sh, db-backup.sh, db-restore.sh
- Testing and quality: test-all.sh, lint-fix.sh, build-all.sh, ci-test.sh
- Updated package.json with all new npm run commands
- Added setup-scripts.sh for initial configuration
- All scripts are CI/CD ready and follow automation best practices

--- a/package.json
+++ b/package.json
@@ -24,7 +24,29 @@
     "core-domain:build": "turbo run build --filter=@reki/core-domain",
     "core-persistence:build": "turbo run build --filter=@reki/core-persistence",
     "core-service:build": "turbo run build --filter=@reki/core-service",
-    "persistence-commons:build": "turbo run build --filter=@reki/persistence-commons"
+    "persistence-commons:build": "turbo run build --filter=@reki/persistence-commons",
+    "dev:start": "./scripts/dev-start.sh",
+    "dev:restart": "./scripts/dev-restart.sh",
+    "dev:stop": "./scripts/dev-stop.sh",
+    "service:start": "./scripts/service-start.sh",
+    "start:core": "./scripts/start-core.sh",
+    "start:app": "./scripts/start-app.sh",
+    "start:telegram": "./scripts/start-telegram.sh",
+    "start:auth": "./scripts/start-auth.sh",
+    "start:db": "./scripts/start-db.sh",
+    "dev:fast": "./scripts/dev-start-fast.sh",
+    "start:core:fast": "./scripts/start-core-fast.sh",
+    "start:telegram:fast": "./scripts/start-telegram-fast.sh",
+    "logs": "./scripts/logs.sh",
+    "debug": "./scripts/debug.sh",
+    "health": "./scripts/health-check.sh",
+    "db:reset": "./scripts/db-reset.sh",
+    "db:backup": "./scripts/db-backup.sh",
+    "db:restore": "./scripts/db-restore.sh",
+    "test:all": "./scripts/test-all.sh",
+    "lint:fix": "./scripts/lint-fix.sh",
+    "build:all": "./scripts/build-all.sh",
+    "ci:test": "./scripts/ci-test.sh"
   },
   "devDependencies": {
     "@types/jest": "^29.5.8",
