--- a/packages/auth-service/package.json
+++ b/packages/auth-service/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@reki/auth-service",
   "version": "0.1.0",
-  "description": "Authentication and Authorization Service for Reki",
+  "description": "Auth service for Reki Control Panel",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
@@ -27,6 +27,7 @@
     "@nestjs/swagger": "^7.0.0",
     "@nestjs/config": "^3.0.0",
     "bcrypt": "^5.1.0",
+    "bcryptjs": "^2.4.3",
     "class-validator": "^0.14.0",
     "class-transformer": "^0.5.1",
     "passport": "^0.6.0",
