--- a/packages/auth-persistence/package.json
+++ b/packages/auth-persistence/package.json
@@ -9,13 +9,13 @@
     "test": "jest"
   },
   "dependencies": {
-    "@reki/auth-domain": "file:../auth-domain",
+    "@reki/auth-domain": "^0.1.0",
     "@reki/persistence-commons": "file:../persistence-commons",
-    "knex": "^3.0.0",
-    "pg": "^8.11.0"
+    "knex": "^3.1.0",
+    "pg": "^8.11.3"
   },
   "devDependencies": {
-    "@types/pg": "^8.10.0",
+    "@types/pg": "^8.10.8",
     "typescript": "^5.0.0"
   }
 }
