--- a/packages/auth-persistence/tsconfig.json
+++ b/packages/auth-persistence/tsconfig.json
@@ -2,7 +2,9 @@
   "extends": "../../config/tsconfig.base.json",
   "compilerOptions": {
     "outDir": "./dist",
-    "rootDir": "./src"
+    "rootDir": "./src",
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata": true
   },
   "include": ["src/**/*", "auth-persistence.module.ts", "role.repository.ts", "user.repository.ts", "permission.repository.ts"],
   "exclude": ["node_modules", "dist", "**/*.test.ts"]
